<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_10sdp"
    android:background="@drawable/bg_curved">

    <TextView
        android:id="@+id/titleTx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/notification_permission"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descTx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:text="@string/notification_permission_required"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTx" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:alpha="0.0"
        android:background="@color/fine_grey"
        app:layout_constraintTop_toTopOf="@id/okButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/okButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:backgroundTint="@color/primary_color"
        android:gravity="center"
        android:text="@string/ok_text"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintTop_toBottomOf="@id/descTx" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:backgroundTint="@color/lightGray"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_6sdp"
        app:layout_constraintEnd_toStartOf="@id/okButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descTx" />

</androidx.constraintlayout.widget.ConstraintLayout>