<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_curved"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/location_permission"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/allow_all_the_time"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTv" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/permissionImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/location_permission_img"
        app:layout_constraintTop_toBottomOf="@id/descriptionTV" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/doneBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/ok_text"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permissionImg"
        app:rippleColor="@color/primary_color" />

</androidx.constraintlayout.widget.ConstraintLayout>