<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_curved"
    android:paddingTop="@dimen/_10sdp">


    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="5dp"
        android:gravity="center_horizontal"
        android:text="@string/request_for_battery_optimization"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="8dp"
        android:text="@string/battery_optimization_description"
        android:textAlignment="textStart"
        android:textColor="@color/fine_grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTv" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:alpha="0.6"
        android:background="@color/fine_grey"
        app:layout_constraintTop_toBottomOf="@id/descriptionTV" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnForward"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/allow"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/_8sdp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionTV" />

</androidx.constraintlayout.widget.ConstraintLayout>